[package]
name = "tokio-process-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
nix = { version = "0.27.1", features = ["signal"] }
tokio = { version = "1.32.0", features = ["full", "io-util"] }
